unpackaged/main/default/objects/Contact/fields/Alternative_Contact_If_Absent__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Contact_If_Absent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternative Contact (If Absent)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>