unpackaged/main/default/objects/Contact/fields/Application_URL__c.field-meta.xml
<CustomField>
    <fullName>Application_URL__c</fullName>
    <formula>&quot;https://www.tfaforms.com/4833109?conid=&quot;  &amp;  Id</formula>
    <label>Application URL</label>
    <type>Text</type>
</CustomField>