unpackaged/main/default/objects/Contact/fields/Certificate_Address__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate Address</label>
    <type>Checkbox</type>
</CustomField>