unpackaged/main/default/objects/Contact/fields/Community_User__c.field-meta.xml
<CustomField>
    <fullName>Community_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Customer Portal Manager, Customer Portal User</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>