unpackaged/main/default/objects/Contact/fields/ConvertedLeadID__c.field-meta.xml
<CustomField>
    <fullName>ConvertedLeadID__c</fullName>
    <label>ConvertedLeadID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>