unpackaged/main/default/objects/Contact/fields/Generated_Community_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Generated_Community_Nickname__c</fullName>
    <label>Generated Community Nickname</label>
    <length>40</length>
    <type>Text</type>
</CustomField>