unpackaged/main/default/objects/Contact/fields/Generated_Community_Username__c.field-meta.xml
<CustomField>
    <fullName>Generated_Community_Username__c</fullName>
    <label>Generated Community Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>