unpackaged/main/default/objects/Contact/fields/ia_crm__SFDC_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SFDC_Contact_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>SFDC Contact Id</label>
    <type>Text</type>
</CustomField>