unpackaged/main/default/objects/Contact/fields/Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the member would like to receive our newsletter</inlineHelpText>
    <label>Newsletter</label>
    <type>Checkbox</type>
</CustomField>