unpackaged/main/default/objects/Contact/fields/Partnerships_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Partnerships_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who the account manager is for the supporter</description>
    <inlineHelpText>Who the account manager is for the supporter</inlineHelpText>
    <label>Partnerships Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>