unpackaged/main/default/objects/Contact/fields/Partnerships_Contact_Only__c.field-meta.xml
<CustomField>
    <fullName>Partnerships_Contact_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partnerships Contact Only</label>
    <type>Checkbox</type>
</CustomField>