unpackaged/main/default/objects/Contact/fields/Postal_Address__c.field-meta.xml
<CustomField>
    <fullName>Postal_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Postal Address</label>
    <type>Checkbox</type>
</CustomField>