unpackaged/main/default/objects/Contact/fields/Preferences__c.field-meta.xml
<CustomField>
    <fullName>Preferences__c</fullName>
    <inlineHelpText>Tick all that apply</inlineHelpText>
    <label>Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Preferences</valueSetName>
    </valueSet>
</CustomField>