unpackaged/main/default/objects/Contact/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <formula>IF(Id = Account.Primary_Contact__r.Id , true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates that this contact is the primary contact for the account that it is affiliated with.</inlineHelpText>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>