unpackaged/main/default/objects/Contact/fields/Privacy__c.field-meta.xml
<CustomField>
    <fullName>Privacy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The individual has agreed to the privacy policy.</inlineHelpText>
    <label>Privacy</label>
    <type>Checkbox</type>
</CustomField>