unpackaged/main/default/objects/Contact/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <label>Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration Contact</fullName>
            </value>
            <value>
                <fullName>Agricultural/Technical Contact</fullName>
            </value>
            <value>
                <fullName>Artwork Contact</fullName>
            </value>
            <value>
                <fullName>Assessments Contact</fullName>
            </value>
            <value>
                <fullName>Certification Contact</fullName>
            </value>
            <value>
                <fullName>Compliance Contact</fullName>
            </value>
            <value>
                <fullName>Membership Fee Contact</fullName>
            </value>
            <value>
                <fullName>Licence Fee Contact</fullName>
            </value>
            <value>
                <fullName>Traceability Contact</fullName>
            </value>
            <value>
                <fullName>Payments Contact</fullName>
            </value>
            <value>
                <fullName>Partnerships Commercial Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>