unpackaged/main/default/objects/Contact/fields/Same_as_Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Same_as_Account_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick this box if the address for this contact is the same as the address for the account it is directly related to.</description>
    <inlineHelpText>Tick this box if the address for this contact is the same as the address for the account it is directly related to.</inlineHelpText>
    <label>Same as Account Address</label>
    <type>Checkbox</type>
</CustomField>