unpackaged/main/default/objects/Contact/validationRules/LandlineNumberValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>LandlineNumberValidation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Phone , &quot;[0-9+\\-\\(\\)\\s]*&quot;))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please enter a valid phone number.</errorMessage>
</ValidationRule>